--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lJ4-Cr-pqr">
-    <device id="ipad12_9rounded" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lJ4-Cr-pqr">
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,14 +25,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jTO-6V-CnX">
-                                <rect key="frame" x="0.0" y="64" width="1024" height="212"/>
+                                <rect key="frame" x="0.0" y="40" width="1024" height="212"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="212" id="BYN-vP-dYR"/>
                                     <constraint firstAttribute="width" constant="414" id="eAL-ka-wsg"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DWs-bt-aIo">
-                                <rect key="frame" x="20" y="284" width="984" height="216.5"/>
+                                <rect key="frame" x="20" y="260" width="984" height="216.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="374" id="4cL-oU-iac"/>
                                     <constraint firstAttribute="height" constant="216.5" id="OmW-lg-MFY"/>
@@ -45,7 +43,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-4S-Eqa">
-                                <rect key="frame" x="0.0" y="24" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="414" id="QcZ-Ru-7ql"/>
                                     <constraint firstAttribute="height" constant="40" id="mhv-2t-Zhf"/>
@@ -55,7 +53,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rXu-9I-65p">
-                                <rect key="frame" x="90" y="507.5" width="844" height="30"/>
+                                <rect key="frame" x="90" y="483.5" width="844" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="jgZ-Ce-oQ2"/>
                                 </constraints>
@@ -68,7 +66,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7De-Ib-Dfc">
-                                <rect key="frame" x="92" y="544.5" width="840" height="30"/>
+                                <rect key="frame" x="92" y="520.5" width="840" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="8vW-0N-Zkw"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="B6H-ff-yV4"/>
@@ -132,7 +130,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cwe-Ih-cGp">
-                                <rect key="frame" x="0.0" y="74" width="414" height="4126"/>
+                                <rect key="frame" x="0.0" y="50" width="414" height="4150"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SgD-Qv-JMF">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="4050"/>
@@ -332,7 +330,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                     </constraint>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fred &amp; Pamela Buffet Cancer Center" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbV-Av-W4A">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fred &amp; Pamela Buffett Cancer Center" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbV-Av-W4A">
                                                 <rect key="frame" x="10" y="660" width="394" height="77"/>
                                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="25"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -824,13 +822,13 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <mask key="constraints">
                                                 <exclude reference="1xv-6h-LSt"/>
                                                 <exclude reference="PIa-kw-WfG"/>
-                                                <exclude reference="9fQ-yP-Gkl"/>
-                                                <exclude reference="L2C-Mv-leZ"/>
                                                 <exclude reference="9QS-9m-ZEX"/>
                                                 <exclude reference="PoX-Ol-YeB"/>
                                                 <exclude reference="Awg-dh-Ptj"/>
                                                 <exclude reference="S6V-37-8N3"/>
                                                 <exclude reference="ijU-cp-V4v"/>
+                                                <exclude reference="9fQ-yP-Gkl"/>
+                                                <exclude reference="L2C-Mv-leZ"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=regular">
@@ -841,8 +839,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <include reference="1xv-6h-LSt"/>
                                                 <exclude reference="LQC-S2-t3b"/>
                                                 <exclude reference="PIa-kw-WfG"/>
-                                                <include reference="9fQ-yP-Gkl"/>
-                                                <include reference="L2C-Mv-leZ"/>
                                                 <exclude reference="tLu-Su-i2d"/>
                                                 <exclude reference="9kp-sl-AEF"/>
                                                 <exclude reference="ZH6-zx-JdT"/>
@@ -857,6 +853,8 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <exclude reference="lOG-n1-AEy"/>
                                                 <include reference="S6V-37-8N3"/>
                                                 <include reference="ijU-cp-V4v"/>
+                                                <include reference="9fQ-yP-Gkl"/>
+                                                <include reference="L2C-Mv-leZ"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -915,7 +913,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                     <tabBarItem key="tabBarItem" title="About" image="aboutIcon" id="Okd-1X-uCt"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rv6-eK-FwH">
-                        <rect key="frame" x="0.0" y="24" width="1024" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.68627450980000004" green="0.062745098040000002" blue="0.17254901959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
