--- a/HealingArts/ArtworkDetails.storyboard
+++ b/HealingArts/ArtworkDetails.storyboard
@@ -293,6 +293,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="lER-Z3-vKJ"/>
                     </view>
+                    <navigationItem key="navigationItem" id="cpJ-be-bVH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bIc-ip-tys" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -326,19 +327,19 @@
                                 <rect key="frame" x="0.0" y="20" width="414" height="876"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmA-fJ-Tzh">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="951"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="527"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mapOverlayImage" translatesAutoresizingMaskIntoConstraints="NO" id="K4K-xf-NTy">
-                                                <rect key="frame" x="20" y="20" width="374" height="350"/>
+                                                <rect key="frame" x="20" y="20" width="374" height="1"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="350" id="rrd-qM-zWp"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="62Q-Sn-KfC">
-                                                <rect key="frame" x="0.0" y="385" width="414" height="1155"/>
+                                                <rect key="frame" x="0.0" y="36" width="414" height="1080"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55n-80-cCq">
-                                                <rect key="frame" x="20" y="404" width="374" height="42"/>
+                                                <rect key="frame" x="20" y="55" width="374" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Sd1-Ut-DQ6"/>
                                                 </constraints>
@@ -347,16 +348,16 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SN8-HX-1DI">
-                                                <rect key="frame" x="20" y="466" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="117" width="374" height="45"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ5-gP-Aav">
-                                                        <rect key="frame" x="50" y="-2.3333333333333144" width="319" height="77"/>
+                                                        <rect key="frame" x="50" y="-2.3333333333333428" width="319" height="45"/>
                                                         <connections>
                                                             <action selector="onArtistButtonPressed:" destination="nWM-gU-QUF" eventType="touchUpInside" id="Mdb-Kr-tug"/>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No artist given" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJs-3e-txP">
-                                                        <rect key="frame" x="50" y="12" width="316" height="36"/>
+                                                        <rect key="frame" x="50" y="12" width="316" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="5tY-c7-ZeU"/>
                                                         </constraints>
@@ -365,7 +366,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-artist-502" translatesAutoresizingMaskIntoConstraints="NO" id="1Rp-bS-w9z">
-                                                        <rect key="frame" x="7" y="5" width="35" height="50"/>
+                                                        <rect key="frame" x="7" y="5" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="AtP-OP-24I"/>
                                                             <constraint firstAttribute="width" constant="35" id="KgF-JB-o1K"/>
@@ -389,10 +390,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BZB-Xy-gkQ">
-                                                <rect key="frame" x="20" y="534" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="170" width="374" height="45"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="No Date available" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bvj-Fj-VAl">
-                                                        <rect key="frame" x="50" y="12" width="316" height="36"/>
+                                                        <rect key="frame" x="50" y="12" width="316" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="2h1-9S-jJZ"/>
                                                         </constraints>
@@ -401,7 +402,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-calendar-502" translatesAutoresizingMaskIntoConstraints="NO" id="a6P-y8-Vyc">
-                                                        <rect key="frame" x="7" y="5" width="35" height="50"/>
+                                                        <rect key="frame" x="7" y="5" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="35" id="Ial-w4-jO0"/>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="Pjz-Ok-xjd"/>
@@ -422,17 +423,17 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AGT-TW-s8e">
-                                                <rect key="frame" x="20" y="602" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="223" width="374" height="45"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-seed-of-life-502" translatesAutoresizingMaskIntoConstraints="NO" id="ro1-1m-ANi">
-                                                        <rect key="frame" x="7" y="5" width="35" height="50"/>
+                                                        <rect key="frame" x="7" y="5" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="35" id="6Ub-fn-ffv"/>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="LCN-hU-w9n"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No medium available" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl6-bs-Hu3">
-                                                        <rect key="frame" x="50" y="12" width="316" height="36"/>
+                                                        <rect key="frame" x="50" y="12" width="316" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="2cE-Nl-FtH"/>
                                                         </constraints>
@@ -454,17 +455,17 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gK1-NR-j4d">
-                                                <rect key="frame" x="20" y="670" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="276" width="374" height="45"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-surface-502" translatesAutoresizingMaskIntoConstraints="NO" id="r9m-qA-NQS">
-                                                        <rect key="frame" x="7" y="5" width="35" height="50"/>
+                                                        <rect key="frame" x="7" y="5" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="VWZ-Kc-g6J"/>
                                                             <constraint firstAttribute="width" constant="35" id="WAa-zW-cdf"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No dimensions available" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4W-Hx-QXE">
-                                                        <rect key="frame" x="50" y="12" width="316" height="36"/>
+                                                        <rect key="frame" x="50" y="12" width="316" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="yfD-sr-VpB"/>
                                                         </constraints>
@@ -486,17 +487,17 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="slZ-3f-UQd">
-                                                <rect key="frame" x="20" y="738" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="329" width="374" height="45"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-welfare-502" translatesAutoresizingMaskIntoConstraints="NO" id="tAy-38-wRE">
-                                                        <rect key="frame" x="7" y="5" width="35" height="50"/>
+                                                        <rect key="frame" x="7" y="5" width="35" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="EVs-uM-m3K"/>
                                                             <constraint firstAttribute="width" constant="35" id="nkI-Hh-MKS"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No donor information available" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSn-aD-1nj">
-                                                        <rect key="frame" x="50" y="12" width="316" height="36"/>
+                                                        <rect key="frame" x="50" y="12" width="316" height="21"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="wM5-sr-BC6"/>
                                                         </constraints>
@@ -518,7 +519,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9vT-il-bUi">
-                                                <rect key="frame" x="20" y="806" width="374" height="45"/>
+                                                <rect key="frame" x="20" y="382" width="374" height="45"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No description available" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FDa-fX-Rb5">
                                                         <rect key="frame" x="8" y="12" width="358" height="21"/>
@@ -536,7 +537,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THI-oZ-udb">
-                                                <rect key="frame" x="20" y="871" width="374" height="45"/>
+                                                <rect key="frame" x="20" y="447" width="374" height="45"/>
                                                 <state key="normal" title="Leave Feedback"/>
                                                 <connections>
                                                     <action selector="onFeedbackButtonPressed:" destination="nWM-gU-QUF" eventType="touchUpInside" id="o6i-yL-0Pq"/>
@@ -615,6 +616,7 @@
                         <segue destination="fgn-Lm-YaC" kind="push" identifier="detailsToFeedbackSegue" id="EHT-9e-X6a"/>
                         <segue destination="0Lk-an-beU" kind="push" identifier="detailsToArtistDetailsSegue" id="Wgi-uf-hUd"/>
                         <segue destination="bhI-VO-vKJ" kind="push" id="0qE-5F-96S"/>
+                        <segue destination="S4a-NC-Q21" kind="push" identifier="detailsToZoomSegue" id="FCt-9c-Aef"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NeT-eg-7CQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -703,6 +705,7 @@
         <image name="mapOverlayImage" width="3221" height="2860"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="FCt-9c-Aef"/>
         <segue reference="0qE-5F-96S"/>
     </inferredMetricsTieBreakers>
 </document>
